force-app/main/default/objects/Shipping_Cost_Rules__mdt/Shipping_Cost_Rules__mdt.object-meta.xml
<CustomObject>
    <label>Shipping Cost Rules</label>
    <pluralLabel>Shipping Cost Rules</pluralLabel>
</CustomObject>