force-app/main/default/objects/Shipping_Cost_Rules__mdt/fields/Max_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Order_Value__c</fullName>
    <label>Max Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>