force-app/main/default/objects/Shipping_Cost_Rules__mdt/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <label>min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>