force-app/main/default/objects/Shipping_Cost_Rules__mdt/fields/Min_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Value__c</fullName>
    <label>Min Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>