force-app/main/default/objects/Shipping_Cost_Rules__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>18</length>
    <type>Text</type>
</CustomField>